# pipecat-voice-agent

./: .env.example  .gitignore  README.md  requirements.txt
Downloads/MinistrosaiRAg-master/MinistrosaiRAg-master/: .env.example  .gitignore  README.md  pyproject.toml
Downloads/MinistrosaiRAg-master/MinistrosaiRAg-master/docs/: Complete Menu.docx
Downloads/MinistrosaiRAg-master/MinistrosaiRAg-master/frontend/: agent.js  config.js  index.html
Downloads/MinistrosaiRAg-master/MinistrosaiRAg-master/ingestion/: __init__.py  config.py  indexer.py
Downloads/MinistrosaiRAg-master/MinistrosaiRAg-master/server/: config.py  main.py  pipeline.py  rag_service.py
Downloads/MinistrosaiRAg-master/MinistrosaiRAg-master/server/processors/: context_sanitizer.py  naturalizer.py  rag_injector.py  topic_guard.py
RAG/query_pipeline/: README.md  query_api.py  query_config.py  query_intent.py  query_llm.py  query_pipeline.py  query_retriever.py  query_session.py
RAG/query_pipeline/qdrant_storage/collection/restaurant_grand_chennai/: storage.sqlite
client/: agent.js  audio-processor.js  index.html
llamaindex_rag/: README.md  config.py  injection_retrivel.py  main.py  pyproject.toml
llamaindex_rag/docs/: Restaurant Grand Chennai.docx  TABLE BOOKING SYSTEM.docx  customerexperience.docx
llamaindex_rag/ingestion/: chunker.py  indexer.py  metadata.py  parser.py  refinement.py
llamaindex_rag/query/: query_pipeline.py
scripts/: test_pipeline_import.py
server/: config.py  main.py  pipeline.py
server/middleware/: __init__.py  rate_limiter.py  security.py
server/processors/: denoiser.py  llm_empty_guard.py  naturalizer.py  pivot_detector.py
server/serializers/: raw_pcm.py
voice-agent/: pyproject.toml
