[project]
name = "llamaindex-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "llama-index-core>=0.10.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-openai-like>=0.7.2",
    "llama-index-retrievers-bm25>=0.7.1",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "python-docx>=1.2.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=5.5.1",
]
